# terrarium

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/sessions/: 5434b8dd-cb62-459c-a5d4-28ed079c2fef.json  7dd41d5a-e5b4-4b8d-9a19-09b0f2656ca9.json
src/: config.rs  main.rs  role.rs  utils.rs
src/ai/: actor.rs  context.rs  director.rs  mod.rs
src/scene/: build.rs  item.rs  mod.rs  room.rs
