[package]
name = "terrarium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
console = "0.16.3"
dashmap = "6.1.0"
dialoguer = "0.12.0"
rand = "0.10.0"
ratatui = { version = "0.30.0", default-features = false, features = ["termion"] }
rig-core = "0.33.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt", "sync", "time"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
